Possibly done with the script

--- a/world-cup-bd/docker-compose.yml
+++ b/world-cup-bd/docker-compose.yml
@@ -1,8 +1,8 @@
+# world-cup-bd/docker-compose.yml
 services:
   postgres:
     image: postgres:latest
     container_name: postgres-wc
-    restart: always
     environment:
       POSTGRES_USER: wcuser
       POSTGRES_PASSWORD: wcpass
@@ -10,8 +10,8 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data      # ✅ Persistance automatique
-      - ./docker/db/init.sql:/docker-entrypoint-initdb.d/init.sql  # Script de création
+      - pgdata:/var/lib/postgresql/data          # volume persistant (ok)
+      - ./docker/db/backup.sql:/docker-backup.sql:ro  # <-- nouveau
 
 volumes:
-  pgdata:  # Ce volume stockera les données PostgreSQL localement
+  pgdata:
